v.0.4.3 - Online payments with path finding
- Online mode: Payment: find alternatives (find paths)
- Bithomp logo animation
- Removing Donation link
- Adding Coil meta tag
- Showing warning fee message only for escrow
- Loading state for server connection button
- Erasing results and alternatives when amount (value, currency, counterparty) changed.

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -332,6 +332,7 @@ a:hover {
 
 .main-box .footer {
   margin: 20px auto;
+  font-size: 12px;
 }
 
 /* checkbox starts */
@@ -525,6 +526,14 @@ a:hover {
   display: none;
 }
 /* select ends */
+
+/* extentions */
+.main-box button.payment-find-alternatives {
+  width: 160px;
+}
+.main-box .wide-buttons button {
+  width: 400px;
+}
 
 @media (max-width: 470px) {
   body {
