v.0.4.4 - Payments with invoiceID.
- Payments: allow invoiceID
- Digits only fields: allow "Paste"
- Testnet: correct submit/activate links
- Offline: Sequence: allow only numbers

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -235,6 +235,11 @@ a:hover {
   width: 266px;
 }
 
+.main-box .fields-wide .fields-group-header {
+  text-align: left;
+  padding-left: 3px;
+}
+
 .main-box .line-with-button {
   margin-bottom: 25px;
 }
